name:                skylighting
version:             0.14
synopsis:            syntax highlighting library
description:         Skylighting is a syntax highlighting library with
                     support for over one hundred languages.  It derives
                     its tokenizers from XML syntax definitions used
                     by KDE's KSyntaxHighlighting framework, so any
                     syntax supported by that framework can be added.
                     An optional command-line program is provided.

                     Skylighting is intended to be the successor to
                     highlighting-kate.

                     This package provides generated syntax modules
                     based on the KDE XML definitions provided by the
                     @skylighting-core@ package. As a result this
                     package is licensed under the GPL.

homepage:            https://github.com/jgm/skylighting
license:             GPL-2
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           (C) 2016 John MacFarlane
category:            Text
build-type:          Simple
extra-doc-files:     README.md
                     changelog.md

cabal-version:       1.22

source-repository head
  type:              git
  location:          https://github.com/jgm/skylighting.git

library
  exposed-modules:     Skylighting
  reexported-modules:    skylighting-core:Skylighting.Core
                       , skylighting-core:Skylighting.Types
                       , skylighting-core:Skylighting.Regex
                       , skylighting-core:Skylighting.Parser
                       , skylighting-core:Skylighting.Styles
                       , skylighting-core:Skylighting.Syntax
                       , skylighting-core:Skylighting.Tokenizer
                       , skylighting-format-ansi:Skylighting.Format.ANSI
                       , skylighting-format-blaze-html:Skylighting.Format.HTML
                       , skylighting-format-context:Skylighting.Format.ConTeXt
                       , skylighting-format-latex:Skylighting.Format.LaTeX
  other-extensions:    CPP
  build-depends:       base >= 4.8 && < 5.0,
                       skylighting-core == 0.14,
                       skylighting-format-ansi >= 0.1 && < 0.2,
                       skylighting-format-context >= 0.1 && < 0.2,
                       skylighting-format-latex >= 0.1 && < 0.2,
                       skylighting-format-blaze-html >= 0.1 && < 0.2,
                       containers,
                       binary
  hs-source-dirs:      src
  ghc-prof-options:    -fprof-auto-exported
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages

Flag executable
  Description:   Whether to build the skylighting program
  Default:       False

executable skylighting
  build-depends:       base >= 4.8 && < 5.0,
                       text,
                       pretty-show,
                       containers,
                       bytestring,
                       blaze-html >= 0.5,
                       skylighting
  hs-source-dirs:      bin
  main-is:             main.hs
  default-language:    Haskell2010
  other-extensions:    CPP
  ghc-options:         -Wall -rtsopts
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  if flag(executable)
    buildable:         True
  else
    buildable:         False
  other-modules:  Paths_skylighting
